# pytest-fail-slow

./: CHANGELOG.md  README.rst  pyproject.toml  pytest_fail_slow.py  setup.cfg  tox.ini
.github/workflows/: test.yml
src/: pytest_fail_slow.py
src/pytest_fail_slow/: __init__.py
test/: test_fail_slow.py  test_fail_slow_setup.py  test_parse_duration.py
