[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-fail-slow"
dynamic = ["version"]
description = "Fail tests that take too long to run"
readme = "README.rst"
requires-python = ">=3.8"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "pytest-fail-slow@varonathe.org" }
]

keywords = [
    "pytest",
    "slow tests",
    "timeout",
]

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Environment :: Plugins",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "pytest >= 6.0",
]

[project.entry-points."pytest11"]
fail-slow = "pytest_fail_slow"

[project.urls]
"Source Code" = "https://github.com/jwodder/pytest-fail-slow"
"Bug Tracker" = "https://github.com/jwodder/pytest-fail-slow/issues"

[tool.hatch.version]
path = "pytest_fail_slow.py"

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/pytest_fail_slow.py",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.hatch.envs.default]
python = "3"
